Updated live reload search

--- a/tmuxinator/drupal8.yml
+++ b/tmuxinator/drupal8.yml
@@ -14,7 +14,7 @@ windows:
         # Search for any windows using livereload, then kill and restart process
         # We search for the pid by the port number in case another process has started
         # its own copy. This example is using webpack encore to handle assets
-        - cd themes/custom/yourTheme && lsof -t -i tcp:35729 | xargs kill && yarn run encore dev --watch
+        - cd themes/custom/yourTheme && lsof -i tcp:35729 | grep node | awk '{print $2'} | xargs kill && yarn run encore dev --watch
         # Start the drupal dev server, search by the port since different versions of 
         # drupal use different process descriptions 
-        - lsof -t -i tcp:8888 | xargs kill && drush rs
+        - lsof -i tcp:8888  | grep php | awk '{print $2}' | xargs kill && bin/console server:run -vvv xargs kill && drush rs
