--- a/tmuxinator/symfony4.yml
+++ b/tmuxinator/symfony4.yml
@@ -14,7 +14,7 @@ windows:
         # Search for any windows using livereload, then kill and restart process
         # We search for the pid by the port number in case another process has started
         # its own copy
-        - lsof -t -i tcp:35729 | xargs kill && yarn run encore dev --watch
+        - lsof -i tcp:35729 | grep node | awk '{print $2'} | xargs kill && yarn run encore dev --watch
         # Start the symfony dev server, search by the port since different versions of 
         # Symfony use different process descriptions. Then grep by php to only kill the dev server
         - lsof -i tcp:8000  | grep php | awk '{print $2}' | xargs kill && bin/console server:run -vvv
